<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/version_bkgrd"
	android:orientation="vertical"
	android:paddingBottom="5dp" >

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="5dp"
		android:text="@string/intro"
		android:textColor="#ffffff33"
		android:textSize="16sp"
		android:textStyle="bold" />

	<Button
		android:id="@+id/speech_btn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/speech" />

	<EditText
		android:id="@+id/voice_note_editText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		tools:ignore="TextFields" >
	</EditText>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="5dp"
			android:text="@string/word_intro"
			android:textColor="#FFFFFF"
			android:textStyle="italic" />

		<Button
			android:id="@+id/save_btn_speech"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/save_btn" />
	</LinearLayout>

	<ListView
		android:id="@+id/word_list"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginTop="5dp"
		android:layout_weight="1"
		android:background="@drawable/words_bg"
		android:paddingBottom="3dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="3dp" />

</LinearLayout>