<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#CCCC99"
	android:orientation="vertical" >

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		tools:ignore="UseCompoundDrawables" >

		<ImageView
			android:id="@+id/imgv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/app_version_info"
			android:src="@drawable/ic_list_library_authors" />

		<TextView
			android:id="@+id/tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginTop="10dip"
			android:text="@string/sve_nte_text_view"
			android:textColor="#000000"
			android:textSize="25sp" />
	</LinearLayout>

	<EditText
		android:id="@+id/title_note_editText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="text|textCapSentences" >
	</EditText>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<Button
			android:id="@+id/save_to_google"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sve_note_dialog_button"
			tools:ignore="ButtonStyle" />
	</LinearLayout>

</LinearLayout>